--- a/src/App.css
+++ b/src/App.css
@@ -56,109 +56,38 @@ body {
 /* ================== */
 
 
-/*      Saldo Box     */
+/*        Saldo Box        */
 
 
 /* ================== */
 
-#saldo-box .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.total-saldo {
-    border-radius: 10px 10px;
-    background: white;
-    margin-top: -70px;
-    z-index: 2;
-    border: 1px solid rgb(68 68 68 / 15%);
-}
-
-.mini-saldo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    margin: 0;
-    text-align: center;
-    flex: 1 1;
-}
-
-.mini-saldo-pemasukan {
-    border-bottom-left-radius: 10px;
-    border-right: 1px solid #eee;
-    background-color: var(--warna-pemasukan);
-}
-
-.mini-saldo-pengeluaran {
-    border-bottom-right-radius: 10px;
-    border-left: 1px solid #eee;
-    background-color: var(--warna-pengeluaran);
-}
-
-
-/* ================== */
-
-
-/*     Transaction    */
-
-
-/* ================== */
-
-.list-transaction {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: white;
+.card{
+    width: 30%;
     position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.list-transaction small {
-    font-size: 0.7rem;
+.border-left{
+    border-bottom-left-radius: 6px;
 }
 
-.list-pemasukan {
-    border-left: 5px solid var(--warna-pemasukan);
+.border-right{
+    border-bottom-right-radius: 6px;
 }
 
-.list-pengeluaran {
-    border-left: 5px solid var(--warna-pengeluaran);
-}
 
-.list-pemasukan .text {
-    color: #1aa35b;
-    white-space: nowrap;
-}
+/* ================== */
 
-.list-pengeluaran .text {
-    color: #d6325f;
-    white-space: nowrap;
-}
 
-.list-transaction .delete-icon {
-    background-color: var(--warna-pengeluaran);
-    color: #ffffff;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    border-top-right-radius: 3px 3px;
-    line-height: 16px;
-    opacity: 0;
-}
+/*        List Transaction        */
 
-.list-transaction:hover .delete-icon {
-    opacity: 1;
-    transition: all ease-in-out 0.4s;
-}
 
+/* ================== */
+
+section#list-transaction{
+    margin-top: -50px;
+}
 
 /* ================== */
 
@@ -208,4 +137,18 @@ body {
 #footer {
     background-color: #412abe;
     clip-path: ellipse(189% 100% at 143.13% 100%);
+}
+
+/* ================== */
+
+
+/*        Media Mobile        */
+
+
+/* ================== */
+
+@media screen and (max-width: 400px) {
+    .card {
+        width: 70%;
+    }
 }
